.. -*- coding: utf-8 -*-

Recent Changes for wxPython
=====================================================================

2.9.2.0
-------
*

Added wx.CommandLinkButton





2.9.1.1
-------
* 14-Oct-2010

wx.Bitmap:  Add ConvertToDisabled method.

wx.AboutBox: Added support for setting a long version string in
addition to the normal version string.

wx.App: Add ScheduleForDestruction, which will allow you to cause a
window to be destrpyed sometime in the near future.  (Most likely to
be used to ensure that there are no more envents pending for the
widget.) 

More methods and properties moved from wx.MouseEvent to the
wx.MouseState base class.  Same for wx.KeyEvent and wx.KeyboardState,
which is used to hold modifier key states, and which is also a base
class of wx.MouseState.

wx.Button can now have both a text and a bitmap label (or just one or
the other.)  wx.BitmapButton is pretty much redundant and will likely
be phased out sometime in the future.  (The OSX Carbon build does not
support this new feature, but the Cocoa build does.)

wx.ComboBox:  Added Popup and Dismiss methods for programatically
showing and hiding the popup, although they are not implemented for
all platforms yet.

wx.GenericDirCtrl can now select multiple paths.

Removed the deprecated wx.Effects class.

wx.Image: Added ConvertToGreyscale and ConvertToDisabled methods, also
new resampling scaling methods.

wx.Toolbar now suports inserting stretchable space between tools.

wx.Dialog can now be Window-modal or the usual App-modal.  On Mac this
results in the dialog sliding down in a sheet from the parent window's
top edge.  For platforms that don't support Window-modal dialogs it
will fall back to an App-modal behavior.  See
wx.Dialog.ShowWindowModal and the wx.Dialog sample in the demo.

wx.wizard.Wizard:  Add a new EVT_WIZARD_PAGE_SHOWN event.

Added wx.InfoBar, which is similar to the message bar used in some web
browser windows that is shown above or below the content window to